// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`receive receives children 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {},
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        "receive this",
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        "child",
      ],
      "props": Object {},
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`receive receives embedded model 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {},
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        "receive this embedded",
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [],
      "props": Object {},
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`receive receives model, props and children 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "prop": "value",
        },
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        "receive this",
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        "child",
      ],
      "props": Object {},
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`receive receives multiple components 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {},
          ],
          "props": Object {},
          "type": "div",
        },
        Object {
          "children": Array [
            "first",
          ],
          "props": Object {},
          "type": "div",
        },
        Object {
          "children": Array [],
          "props": Object {},
          "type": "div",
        },
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {},
          ],
          "props": Object {},
          "type": "div",
        },
        Object {
          "children": Array [
            "second",
          ],
          "props": Object {},
          "type": "div",
        },
        Object {
          "children": Array [],
          "props": Object {},
          "type": "div",
        },
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {},
          ],
          "props": Object {},
          "type": "div",
        },
        Object {
          "children": Array [
            "third",
          ],
          "props": Object {},
          "type": "div",
        },
        Object {
          "children": Array [],
          "props": Object {},
          "type": "div",
        },
      ],
      "props": Object {},
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`receive receives props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "prop": "value",
        },
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        "receive this",
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [],
      "props": Object {},
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`receive receives single model 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {},
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        "receive this",
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [],
      "props": Object {},
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;
